# flux-accounting

./: .gitignore  Makefile  configure.ac
.github/workflows/: main.yml
accounting/: accounting_cli.py  accounting_cli_functions.py  create_db.py
config/: ax_code_coverage.m4
doc/: Makefile.am  conf.py  index.rst  manpages.py  requirements.txt
doc/components/: centralized-db-design.rst
doc/man1/: flux-account-add-queue.rst  flux-account-create-db.rst  flux-account.rst  (+4 more)
etc/: .gitignore  Makefile.am  flux-data.service.in
etc/completions/: flux_accounting.pre
src/: Makefile.am
t/: Makefile.am  t1000-print-hierarchy.t  t1001-mf-priority-basic.t  t1002-mf-priority-small-no-tie.t  t1003-mf-priority-small-tie.t  t1004-mf-priority-small-tie-all.t  t1005-max-jobs-limits.t  t1005-mf-priority-qos.t  t1006-max-jobs-limits.t  t1006-update-fshare.t  t1007-flux-account.t  t1010-update-usage.t  t1011-job-archive-interface.t  t1012-mf-priority-load.t  t1014-mf-priority-dne.t  t1015-mf-priority-urgency.t  t1017-update-db.t  t1019-mf-priority-info-fetch.t  t1023-flux-account-banks.t  t1024-flux-account-queues.t  t1026-flux-account-perms.t  t1027-mf-priority-projects.t  t1032-mf-priority-projects.t  t1039-elastic.t  t1040-elastic.t  t1042-elastic.t  t1043-common-formatter.t  t1043-usage-by-project.t  t1044-elastic.t  t1044-init-db-from-config.t  t1044-mf-priority-resource-limits.t  t1045-elastic-no-flux.t  t1050-enable-wal-mode.t  t1050-issue498.t  t1052-mf-priority-max-preempt-after.t  t1052-mf-priority-queue-limits.t  t1053-update-large-db.t  t1054-mf-priority-max-preempt-after.t  t1055-calc-job-priority.t  t1055-list-job-priorities.t  (+17 more)
t/expected/flux_account/: A_bank.expected  D_bank.expected  E_bank.expected  F_bank_tree.expected  F_bank_users.expected  full_hierarchy.expected
t/expected/large_dbs/: FluxAccountingLarge.db
t/expected/plugin_state/: internal_state_1.expected  internal_state_3.expected
t/expected/pop_db/: db_hierarchy_base.expected  db_hierarchy_new_users.expected
t/expected/print_hierarchy/: small_no_tie.txt  small_no_tie_parsable.txt  small_tie.txt  small_tie_all.txt  small_tie_all_parsable.txt  small_tie_parsable.txt
t/expected/sample_payloads/: same_fairshare.json  small_no_tie.json  small_tie.json  small_tie_all.json
t/expected/test_dbs/: FluxAccountingv0-10-0.db  FluxAccountingv0-11-0.db  FluxAccountingv0-12-0.db  FluxAccountingv0-13-0.db  FluxAccountingv0-14-0.db  FluxAccountingv0-15-0.db  FluxAccountingv0-57-2.db
t/expected/update_fshare/: post_fshare_update.expected
t/python/: t1001_db.py  t1002_user_cmds.py  t1006_job_archive.py  t1007_view_jobs.py  t1008_banks_output.py  t1009_users_output.py  t1010_issue631.py  t1011_predict_job_priority.py  t1011_priorities.py  t1017_config_cmds.py  t1019_recalculate_usage.py
t/scripts/: send_payload.py  update_random_usage.py
(+69 files in other folders)
